--- a/index.html
+++ b/index.html
@@ -20,16 +20,40 @@
 
         </aside>
         <main class="content">
-            <header class="content-header"></header>
+            <header class="content-header">
+
+                <div class="left-header">
+                    <div class="friend-photo">
+                        <img  src="./img/avatar_1.jpg" alt="user-friend">
+                    </div>
+                    <div class="friend-photo-def">
+                        <p>Michele</p>
+                        <p>Ultimo accesso oggi alle 10:35</p>
+                    </div>
+                </div>
+
+                <div class="right-header">
+                    <a href="#">
+                        <i class="fas fa-search"></i>
+                    </a>
+                    <a href="#">
+                        <i class="fas fa-paperclip"></i>
+                    </a>
+                    <a href="#">
+                        <i class="fas fa-ellipsis-v"></i>
+                    </a>
+                </div>
+
+            </header>
             <main class="content-main"></main>
             <footer class="content-footer">
-                <a href="">
+                <a href="#">
                     <i class="far fa-laugh-squint"></i>
                 </a> 
-                
+
                 <input class="footer-message" type="text" placeholder="write a message">
 
-                <a href="">
+                <a href="#">
                     <i class="fas fa-microphone-alt"></i>
                 </a> 
                 
