can manage to distribute chat well

--- a/index.html
+++ b/index.html
@@ -97,7 +97,21 @@
                 </div>
 
             </header>
-            <main class="content-main"></main>
+            <main class="content-main">
+                
+                <div class="msg-send">
+                    <p>Message send</p>
+                    <div class="time-msg">
+                        <span>10/01/2021 15:50:00</span>
+                    </div>
+                </div>
+                <div class="msg-received">
+                    <p>Message received</p>
+                    <div class="time-msg">
+                        <span>10/01/2021 15:50:00</span>
+                    </div>
+                </div>
+            </main>
             <footer class="content-footer">
                 <a href="#">
                     <i class="far fa-laugh-squint"></i>
