--- a/index.html
+++ b/index.html
@@ -98,11 +98,13 @@
 
             </header>
             <main class="content-main">
-                
-                <div class="msg-send">
-                    <p>Message send</p>
-                    <div class="time-msg">
-                        <span>10/01/2021 15:50:00</span>
+                <div class="msg-right">
+
+                    <div class="msg-send">
+                        <p>Message send</p>
+                        <div class="time-msg">
+                            <span>10/01/2021 15:50:00</span>
+                        </div>
                     </div>
                 </div>
                 <div class="msg-received">
