--- a/index.html
+++ b/index.html
@@ -62,9 +62,16 @@
                 <!-- Contacts-->
                 <div class="contacts-list">
                     <ul>
-                        <li class ="contact" v-for="friend in friends">
-                            <img :src="`./img/avatar${friend.avatar}.jpg`" alt="">
+                        <li 
+                        @click="contactShow(index)"
+                        class ="contact"
+                        :class="{focus: friend.visible}"
+                        v-for="(friend,index) in friends" 
+                        :key="index + '-' + friend.name">
+
+                            <img :src="`./img/avatar${friend.avatar}.jpg`" :alt="friend.name">
                             <span>{{friend.name}}</span>
+
                         </li>
                     </ul>
                 </div>
@@ -98,19 +105,20 @@
 
             </header>
             <main class="content-main">
-                <div class="msg-right">
-
-                    <div class="msg-send">
-                        <p>Message send</p>
+                <div v-for="(friend,index) in friends" class="convo">
+                    <div class="msg-right">
+                        <div class="msg-send">
+                            <p>{{friends[index].messages}}</p>
+                            <div class="time-msg">
+                                <span>{{}}</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div  class="msg-received">
+                        <p>{{friend.messages.message}}</p>
                         <div class="time-msg">
                             <span>10/01/2021 15:50:00</span>
                         </div>
-                    </div>
-                </div>
-                <div class="msg-received">
-                    <p>Message received</p>
-                    <div class="time-msg">
-                        <span>10/01/2021 15:50:00</span>
                     </div>
                 </div>
             </main>
@@ -132,7 +140,7 @@
     </div>
 
 
-
+<!--:class="{visible: index == indexOfConvo}" --> 
 
 
 
